SONAR-15212 adjustments in CWEs assignements to categories. Support for new CWEs